fixed double scrollbar

--- a/css/style.css
+++ b/css/style.css
@@ -381,8 +381,6 @@ h1, h2, h3, h4, h5, h6, figure {
 #fh5co-accommodation.display-tc,
 #fh5co-map.display-t,
 #fh5co-map.display-tc,
-#fh5co-schedule.display-t,
-#fh5co-schedule.display-tc,
 #fh5co-gifts.display-t,
 #fh5co-gifts.display-tc
 {
@@ -395,7 +393,6 @@ h1, h2, h3, h4, h5, h6, figure {
 #fh5co-services .fh5co-heading h2,
 #fh5co-accommodation .fh5co-heading h2,
 #fh5co-map .fh5co-heading h2,
-#fh5co-schedule .fh5co-heading h2,
 #fh5co-gifts .fh5co-heading h2 {
   color: #646464;
 }
@@ -404,7 +401,6 @@ h1, h2, h3, h4, h5, h6, figure {
 #fh5co-services .fh5co-heading span,
 #fh5co-accommodation .fh5co-heading span,
 #fh5co-map .fh5co-heading span,
-#fh5co-schedule .fh5co-heading span,
 #fh5co-gifts .fh5co-heading span{
   color: rgb(0, 0, 0);
   text-transform: uppercase;
@@ -417,7 +413,6 @@ h1, h2, h3, h4, h5, h6, figure {
 #fh5co-services .overlay,
 #fh5co-accommodation .overlay,
 #fh5co-map .overlay,
-#fh5co-schedule .overlay,
 #fh5co-gifts .overlay {
   position: absolute;
   top: 0;
@@ -432,7 +427,6 @@ h1, h2, h3, h4, h5, h6, figure {
   #fh5co-services,
   #fh5co-accommodation,
   #fh5co-map,
-  #fh5co-schedule,
   #fh5co-gifts {
     height: inherit;
     padding: 7em 0;
@@ -447,8 +441,6 @@ h1, h2, h3, h4, h5, h6, figure {
   #fh5co-accommodation .display-tc,
   #fh5co-map .display-t,
   #fh5co-map .display-tc,
-  #fh5co-schedule .display-t,
-  #fh5co-schedule .display-tc,
   #fh5co-gifts .display-t,
   #fh5co-gifts .display-tc {
     height: inherit;
@@ -459,7 +451,6 @@ h1, h2, h3, h4, h5, h6, figure {
 #fh5co-services .event-wrap,
 #fh5co-accommodation .event-wrap,
 #fh5co-map .event-wrap,
-#fh5co-schedule .event-wrap,
 #fh5co-gifts .event-wrap {
   border: 2px solid rgba(0, 0, 0, 0.5);
   padding: 18px;
@@ -476,7 +467,6 @@ h1, h2, h3, h4, h5, h6, figure {
   #fh5co-services .event-wrap,
   #fh5co-accommodation .event-wrap,
   #fh5co-map .event-wrap,
-  #fh5co-schedule .event-wrap,
   #fh5co-gifts .event-wrap{
     margin-bottom: 10px;
   }
@@ -486,7 +476,6 @@ h1, h2, h3, h4, h5, h6, figure {
 #fh5co-services .event-wrap h3,
 #fh5co-accommodation .event-wrap h3,
 #fh5co-map .event-wrap h3,
-#fh5co-schedule .event-wrap h3,
 #fh5co-gifts .event-wrap h3 {
   font-size: 14px;
   color: #000000;
@@ -505,8 +494,6 @@ h1, h2, h3, h4, h5, h6, figure {
 #fh5co-services .event-wrap span,
 #fh5co-accommodation .event-wrap p,
 #fh5co-accommodation .event-wrap span,
-#fh5co-schedule .event-wrap p,
-#fh5co-schedule .event-wrap span,
 #fh5co-map .event-wrap p,
 #fh5co-map .event-wrap span,
 #fh5co-gifts .event-wrap p,
@@ -521,7 +508,6 @@ h1, h2, h3, h4, h5, h6, figure {
 #fh5co-services .event-wrap i,
 #fh5co-accommodation .event-wrap i,
 #fh5co-map .event-wrap i,
-#fh5co-schedule .event-wrap i,
 #fh5co-gifts .event-wrap i {
   color: rgb(0, 0, 0);
   font-size: 20px;
@@ -531,7 +517,6 @@ h1, h2, h3, h4, h5, h6, figure {
 #fh5co-services .event-wrap .event-col,
 #fh5co-accommodation .event-wrap .event-col,
 #fh5co-map .event-wrap .event-col,
-#fh5co-schedule .event-wrap .event-col,
 #fh5co-gifts .event-wrap .event-col {
   width: 50%;
   float: left;
@@ -1050,7 +1035,7 @@ form label {
 #fh5co-event .event-wrap img {
   max-width: 440px;
   max-height: 270px;
-  aspect-ratio: 16 / 9;
+  aspect-ratio: 16 / 10;
   height: auto;
 }
 
